--- a/public/js/app/templates/recipes/recipe.html
+++ b/public/js/app/templates/recipes/recipe.html
@@ -1,19 +1,21 @@
-        <h1><%= item.get("title") %></h1>
+        <h1><%= title %></h1>
 
-        <% if item.get("description") != null && item.get("description") != "" %>
+        <% if (description != null && description != "") { %>
             <div class="innfelt">
-                <div class="innhold"><%= item.get("description") %></div>
+                <div class="innhold"><%= description %></div>
             </div>
         <% } %>
+
         <div class="tagger">
-            #{if recipe.tags != null && recipe.tags.size() > 0}
+            <% if (tags != null && tags.length > 0) { %>
                 <span class="">Tagget med</span>
-                #{list items:recipe?.tags, as:"tag"}
-    <a href="@{Recipes.indexMobileTags(tag.nameHash)}"><span class="tagit-label">${tag.name}</span></a>&nbsp;
-                #{/list}
-            #{/if}
+                <% _.each(tags, function(tag){ %>
+                    <a href="#tags/<%= tag.nameHash %>">
+                    <span class="tagit-label"><%= tag.name %></span></a>&nbsp;
+                <% }); %>
+            <% } %>
         </div>
-        <div class="innfelt" style="font-size: 12px">
+        <!--div class="innfelt" style="font-size: 12px">
                     #{if models.RecipeInMenu.find("recipe = ?", recipe).fetch().size() > 0}
                         Brukt
                         i ${models.RecipeInMenu.find("menu.author = ? and recipe = ?", user, recipe).fetch().size()}
@@ -23,12 +25,12 @@
             #{else }
                 Foreløpig ikke brukt i noen menyer.
             #{/else}
-                    </div>
-
+                    </div-->
+                           <!--
         <a data-role="button" ${recipe.isFavorite(user)?"data-theme='b\'":""} href="#" id="favoritt" data-icon="star"
            data-iconpos="right">
             Favoritt
-        </a>
+        </a> -->
 
 <span class="mengdeSelector">
         <button data-mini="true" class="" style="text-align: left;" data-theme="a" >
@@ -36,7 +38,7 @@
                 <span class="minusknapp"></span>
                 <span class="plussknapp"></span>
                     <span class="tekst"> <span style="float: none" class="mengde"
-                            >${utils.Servings.getPreferredServings(user, menu, recipe)}</span> ${recipe?.servesUnit}</span>
+                            ><%= serves %></span> <%= servesUnit %></span>
             </div>
             <div class="title-wrapper"><span
                     class="title">Holder til
@@ -46,7 +48,7 @@
 </span>
 
         <div class="recipeBilde" style="">
-            <img id="bilde" src="${models.Image.get(recipe)}"/>
+            <img id="bilde" src="http://trippelc.com/kokboka/<%= photoName %>"/>
         </div>
 
 
@@ -56,12 +58,18 @@
 
         <div id="ingredient-tasks" data-role="fieldcontain">
             <fieldset data-role="controlgroup" data-type="vertical">
-                #{list items:recipe.ingredients, as:'ingredient'}
-                    #{set user:user /}
-                    #{set ingredient:ingredient /}
-                    #{set scaling:true /}
-                    #{checkBoxItem /}
-                #{/list}
+               <% _.each(ingredients, function(ingredient) { %>
+                <input id="<%= ingredient.id %>"
+                       name="<%= ingredient.description %>" type="checkbox"
+                       data-recipe=""
+                       data-amount="<%= ingredient.amount %>"
+                       data-unit="<%= ingredient.unit %>"
+                       data-description="<%= ingredient.description %>"
+                        >
+                <label for="<%= ingredient.id %>">
+                        <span><%= ingredient.amount %></span> <%= ingredient.unit %> <%= ingredient.description %>
+                </label>
+               <% }); %>
             </fieldset>
         </div>
 
@@ -71,11 +79,11 @@
 
         <div class="innfelt" style="">
             <div name="steps" id="steps" class="innhold"
-                 style="font-size: 14px;">${recipe?.steps?.escape().nl2br()}</div>
+                 style="font-size: 14px;"><%= steps.replace(/[\r?\n]/g, "<br />") %></div>
         </div>
         <div class="ui-grid-a">
             <div class="ui-block-a">
-                <a data-role="button" href="@{Recipes.formMobile(recipe.id)}" data-icon="check" data-iconpos="left">
+                <a data-role="button" href="#recipes/<%= id %>/edit" data-icon="check" data-iconpos="left">
                     Rediger
                 </a>
             </div>
